# Jellyfin-Music-Player

./: .gitignore  README.md  app.py  index.py  login.py  main.py  mediacontroller.py  pyproject.toml  router.py  router_frame.js  sessioncontroller.py
strings/: en_us.yml  zh_tw.yml
